<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>nl.utwente.groove</groupId>
	<artifactId>groove</artifactId>
	<version>${revision}</version>
	
	<properties>
		<revision>7.0.4</revision>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.test.skip>false</maven.test.skip>
	</properties>

	<name>${project.groupId}:${project.artifactId}</name>
	<description>
		GROOVE: GUI, command-line tools and library for graph transformation and verification.
  	</description>
	<url>https://sf.net/projects/groove</url>
	<licenses>
		<license>
    		<name>The Apache License, Version 2.0</name>
	    	<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>
	
	<developers>
	    <developer>
    		<name>Arend Rensink</name>
			<email>arend.rensink@utwente.nl</email>
			<organization>University of Twente, The Netherlands</organization>
			<organizationUrl>http://people.utwente.nl/arend.rensink</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:svn:https://svn.code.sf.net/p/groove/code/groove/trunk</connection>
		<developerConnection>scm:svn:https://svn.code.sf.net/p/groove/code/groove/trunk</developerConnection>
		<url>https://sourceforge.net/projects/groove/files/</url>
	</scm>
	
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.12.1</version>
				<configuration>
					<source>21</source>
					<target>21</target>
                    <compilerArgs>
			            <arg>-Xlint:unchecked</arg>
		            </compilerArgs>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
				</configuration>

				<dependencies>
					<dependency>
						<groupId>org.codehaus.plexus</groupId>
						<artifactId>plexus-compiler-eclipse</artifactId>
						<version>2.12.1</version>
					</dependency>

					<dependency>
						<groupId>org.eclipse.jdt</groupId>
						<artifactId>ecj</artifactId>
						<version>3.31.0</version>
					</dependency>
				</dependencies>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.6.3</version>
				<configuration>
					<additionalOptions>-Xdoclint:none</additionalOptions>
					<reportOutputDirectory>target</reportOutputDirectory>
				</configuration>
				<executions>
        			<execution>
		        		<id>attach-javadocs</id>
        		  		<goals>
		            		<goal>jar</goal>
        		  		</goals>
		        	</execution>
      			</executions>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.5.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<artifactSet>
								<includes>
									<include>nl.utwente.groove:gnuprologjava</include>
									<include>nl.utwente.groove:ltl2buchi</include>
									<include>nl.utwente.groove:osxadapter</include>
									<include>nl.utwente.groove:groove-gxl</include>
								</includes>
							</artifactSet>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>

		<resources>
			<resource>
				<directory>src/main/java/nl/utwente/groove/control/parse</directory>
				<includes>
					<include>Ctrl.g</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/java/nl/utwente/groove/io/conceptual/configuration</directory>
				<includes>
					<include>ConfigSchema.xsd</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
	</build>

    <profiles>
    	<profile>
    		<id>maven</id>
	<build>
		<plugins>
	        <plugin>
    	        <groupId>org.sonatype.central</groupId>
        	    <artifactId>central-publishing-maven-plugin</artifactId>
	            <version>0.6.0</version>
    	        <extensions>true</extensions>
        	    <configuration>
            	    <publishingServerId>central</publishingServerId>
        	        <autoPublish>true</autoPublish>
	            </configuration>
    	    </plugin>

			<!--plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.7.0</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>false</autoReleaseAfterClose>
				</configuration>
			</plugin-->
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>3.0.1</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
				    <useReleaseProfile>false</useReleaseProfile>
				    <releaseProfiles>release</releaseProfiles>
				    <goals>deploy</goals>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
				    <execution>
					   	<id>verify-sign-artifacts</id>
				       	<phase>verify</phase>
				    	<goals>
	    	        		<goal>sign</goal>
    	    			</goals>
			        </execution>
				</executions>
				<configuration>
					<gpgArguments>
                    	<arg>--pinentry-mode</arg>
                    	<arg>loopback</arg>
                	</gpgArguments>
				</configuration>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
    	</profile>
    </profiles>
	<dependencies>
		<dependency>
			<groupId>au.com.bytecode</groupId>
			<artifactId>opencsv</artifactId>
			<version>2.4</version>
		</dependency>
		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>3.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-core</artifactId>
			<version>3.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>3.0.2</version>
		</dependency>
		<dependency>
			<groupId>com.jgoodies</groupId>
		    <artifactId>jgoodies-looks</artifactId>
			<version>2.7.0</version>
		</dependency>
		<dependency>
			<groupId>jgraph</groupId>
			<artifactId>jgraph</artifactId>
			<version>5.13.0.0</version>
		</dependency>
		<dependency>
			<groupId>args4j</groupId>
			<artifactId>args4j</artifactId>
			<version>2.0.26</version>
		</dependency>
		<dependency>
			<groupId>org.apache.groovy</groupId>
			<artifactId>groovy</artifactId>
			<version>5.0.0-alpha-12</version>
		</dependency>
		<dependency>
			<groupId>com.fifesoft</groupId>
			<artifactId>rsyntaxtextarea</artifactId>
			<version>1.5.2</version>
		</dependency>
		<dependency>
			<groupId>xerces</groupId>
			<artifactId>xercesImpl</artifactId>
			<version>2.12.2</version>
			<exclusions>
				<exclusion>
					<groupId>xml-apis</groupId>
					<artifactId>xml-apis</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>xml-resolver</groupId>
			<artifactId>xml-resolver</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr-complete</artifactId>
			<version>3.5.2</version>
			<exclusions>
				<exclusion>
					<groupId>org.antlr</groupId>
					<artifactId>antlr-runtime</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.antlr</groupId>
					<artifactId>antlr</artifactId>
				</exclusion>
				<exclusion>
					<groupId>junit</groupId>
					<artifactId>junit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlrworks</artifactId>
			<version>1.5.2</version>
			<exclusions>
				<exclusion>
					<groupId>org.antlr</groupId>
					<artifactId>antlr-runtime</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.antlr</groupId>
					<artifactId>antlr</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jdt</groupId>
			<artifactId>org.eclipse.jdt.annotation</artifactId>
			<version>2.2.700</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.emf</groupId>
			<artifactId>org.eclipse.emf.ecore</artifactId>
			<version>2.7.0-v20110605-0747</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.emf</groupId>
			<artifactId>org.eclipse.emf.common</artifactId>
			<version>2.7.0-v20110605-0747</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.emf</groupId>
			<artifactId>org.eclipse.emf.ecore.xmi</artifactId>
			<version>2.7.0-v20110520-1406</version>
		</dependency>
		<dependency>
    		<groupId>org.apache.xmlgraphics</groupId>
    		<artifactId>batik-all</artifactId>
    		<version>1.17</version>
    		<exclusions>
				<exclusion>
				    <groupId>xml-apis</groupId>
					<artifactId>xml-apis</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
    		<groupId>org.apache.xmlgraphics</groupId>
		    <artifactId>fop-core</artifactId>
    		<version>2.9</version>
    		<exclusions>
				<exclusion>
				    <groupId>xml-apis</groupId>
					<artifactId>xml-apis</artifactId>
				</exclusion>
				<exclusion>
				    <groupId>org.apache.xmlgraphics</groupId>
					<artifactId>batik-svggen</artifactId>
				</exclusion>
				<exclusion>
				    <groupId>org.apache.xmlgraphics</groupId>
					<artifactId>batik-dom</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- Local libraries -->
		<dependency>
			<groupId>nl.utwente.groove</groupId>
			<artifactId>gnuprologjava</artifactId>
			<version>0.2.6</version>
		</dependency>
		<dependency>
			<groupId>nl.utwente.groove</groupId>
			<artifactId>ltl2buchi</artifactId>
			<version>2010.12</version>
		</dependency>
		<dependency>
			<groupId>nl.utwente.groove</groupId>
			<artifactId>osxadapter</artifactId>
			<version>2.0</version>
		</dependency>
		<dependency>
			<groupId>nl.utwente.groove</groupId>
			<artifactId>groove-gxl</artifactId>
			<version>3.0</version>
		</dependency>

		<!-- Test libraries -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.10.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-runner</artifactId>
			<version>1.10.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>